# airap

./: Cargo.toml  README.md  device.c  pactl_loopback.sh  record.c  server_info  sink  sinks  source_outputs  sources
examples/: average_sampling.rs
examples/average_sampling/: Cargo.toml
examples/average_sampling/src/: main.rs
examples/plotter/: Cargo.toml
examples/plotter-gtk/: Cargo.toml
examples/plotter-gtk/src/: main.rs
examples/plotter-gtk/src/plotter/: imp.rs  mod.rs
examples/plotter-gtk/src/window/: imp.rs  ui.xml
examples/plotter-minifb/: Cargo.toml
examples/plotter-minifb/src/: main.rs
examples/plotter/src/: main.rs
examples/plotter/src/plotter/: imp.rs  mod.rs
examples/plotter/src/window/: imp.rs  ui.xml
src/: audio.rs  error.rs  feature.rs  latency.rs  lib.rs  simple.rs
src/audio/: pulseaudio.rs
