[package]
name = "plotter-gtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
airap = { version = "0.1.0", path = "../.." }
plotters = "0.3.5"
simple_logger = "4.2.0"
plotters-cairo = "0.5.0"
log = "0.4.20"
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_8"] }
