[package]
name = "plotter-minifb"
version = "0.1.0"
authors = ["Lyr 7d1h <lyr-7d1h@pm.me>"]
edition = "2021"

[dependencies]
airap = { version = "0.1.0", path = "../.." }
log = "0.4.20"
minifb = "0.25.0"
plotters = "0.3.5"
plotters-bitmap = "0.3.3"
simple_logger = "4.2.0"

# [dependencies.plotters]
# git = "https://github.com/plotters-rs/plotters"
# default_features = false
# features = ["ttf"]

# [dependencies.plotters-bitmap]
# default_features = false
# git = "https://github.com/plotters-rs/plotters"
